# git_bisectlib

./: README.md  SPEC.md  bisectlib.py  bisectlog.py  pyproject.toml
.github/workflows/: publish.yml
bisectlib/: __init__.py  _report.py
bisectlog/: __init__.py  __main__.py
examples/: flaky_with_fixup.py  perf_regression.py
tests/: test_bisectlib.py  test_bisectlog.py  test_report.py
