[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bisectlib"
version = "0.8.0"
description = "Automated git bisect: render bisect sessions (bisectlog) and write bisect recipes (bisectlib)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Martin Leitner-Ankerl", email = "martin.ankerl@gmail.com" }]
keywords = ["git", "bisect", "regression", "testing", "ci"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/martinus/bisectlib"

[project.scripts]
bisectlog = "bisectlog:main"
git-bisectlog = "bisectlog:main"

[tool.setuptools]
packages = ["bisectlog", "bisectlib"]

[tool.setuptools.package-data]
bisectlog = ["py.typed"]
bisectlib = ["py.typed"]
