[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git_bisectlib"
version = "0.16.1"
description = "Write tiny git bisect recipes in Python; watch progress live in .bisect/status.md."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Martin Leitner-Ankerl", email = "martin.ankerl@gmail.com" }]
keywords = ["git", "bisect", "regression", "testing", "ci"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/martinus/git_bisectlib"

[tool.setuptools]
packages = ["bisectlib"]

[tool.setuptools.package-data]
bisectlib = ["py.typed"]
